# GTRAG

./: ReadME.md  docker-compose.local.yml
backend/: .gitignore  Makefile  alembic.ini  pyproject.toml
backend/alembic/versions/: 2d2f9e5ac6ea_initial_migration.py  4b71fcd7925a_initial_migration.py  5218f1098757_initial_migration.py  567d228d7f06_initial_migration.py  5f5d6b629214_initial_migration.py  6c2a651d3b95_initial_migration.py  6d17ae282790_initial_migration.py  8a4002ad1ce0_initial_migration.py  d93d9e22cc26_initial_migration.py  e8c6e643654e_initial_migration.py
backend/app/: config.py  server.py
backend/app/database/: __init__.py  config.py
backend/app/database/base/: model.py
backend/app/database/session/: model.py  service.py
backend/app/database/user/: model.py  service.py
backend/app/router/: __init__.py
backend/app/router/file/: router.py  schema.py
backend/app/router/user/: dependency.py  router.py  schema.py
backend/app/service/: mailer_send.py  otp.py  pdf_assistant.py
backend/app/websocket/: __init__.py
backend/app/websocket/base/: __init__.py  handler.py
backend/app/websocket/chat/: router.py
backend/app/websocket/chat/handlers/: __init__.py  chat_handler.py
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatRoom.tsx  CopyButton.tsx  Menubar.tsx  MessageBox.tsx  Navbar.tsx  Sidebar.tsx  Spinner.tsx  style.css
frontend/utils/: constants.ts
nginx/: Dockerfile  nginx.conf
(+8 files in other folders)
