[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dash"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"
sqlmodel = "^0.0.21"
sqlalchemy = "^2.0.32"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
rich = "^13.7.1"
authlib = "^1.3.2"
httpx = "^0.27.2"
itsdangerous = "^2.2.0"
json-repair = "^0.29.2"
exceptiongroup = "^1.2.2"
openai = "^1.46.0"
websockets = "^13.1"
mailersend = "^0.5.8"
pyotp = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
